storage/innobase/trx/trx0rseg.cc
@@ -411,7 +411,7 @@ trx_rseg_mem_create(ulint id, fil_space_t* space, ulint page_no)
 static dberr_t trx_undo_lists_init(trx_rseg_t *rseg, trx_id_t &max_trx_id,
                                    const trx_rsegf_t *rseg_header)
 {
-	ut_ad(srv_force_recovery < SRV_FORCE_NO_UNDO_LOG_SCAN);
+  ut_ad(srv_force_recovery < SRV_FORCE_NO_UNDO_LOG_SCAN);
 
   for (ulint i= 0; i < TRX_RSEG_N_SLOTS; i++)
   {
@@ -566,6 +566,7 @@ dberr_t trx_rseg_array_init()
 	bool wsrep_xid_in_rseg_found = false;
 #endif
 	mtr_t mtr;
+	dberr_t err = DB_SUCCESS;
 
 	for (ulint rseg_id = 0; rseg_id < TRX_SYS_N_RSEGS; rseg_id++) {
 		mtr.start();
@@ -595,10 +596,11 @@ dberr_t trx_rseg_array_init()
 				ut_ad(rseg->id == rseg_id);
 				ut_ad(!trx_sys.rseg_array[rseg_id]);
 				trx_sys.rseg_array[rseg_id] = rseg;
-				if (dberr_t err = trx_rseg_mem_restore(
-					    rseg, max_trx_id, &mtr)) {
+				if ((err = trx_rseg_mem_restore(
+					     rseg, max_trx_id, &mtr))
+				    != DB_SUCCESS) {
 					mtr.commit();
-					return err;
+					break;
 				}
 #ifdef WITH_WSREP
 				if (!wsrep_sys_xid.is_null() &&
@@ -617,6 +619,21 @@ dberr_t trx_rseg_array_init()
 		}
 
 		mtr.commit();
+	}
+
+	if (err != DB_SUCCESS) {
+		for (ulint rseg_id = 0; rseg_id < TRX_SYS_N_RSEGS; rseg_id++) {
+			if (trx_rseg_t*& rseg = trx_sys.rseg_array[rseg_id]) {
+				while (trx_undo_t* u= UT_LIST_GET_FIRST(
+					     rseg->undo_list)) {
+					UT_LIST_REMOVE(rseg->undo_list, u);
+					ut_free(u);
+				}
+				trx_rseg_mem_free(rseg);
+				rseg = NULL;
+			}
+		}
+		return err;
 	}
 
 #ifdef WITH_WSREP
